--- a/examples/complete-example/cafe-ingress.yaml
+++ b/examples/complete-example/cafe-ingress.yaml
@@ -1,4 +1,3 @@
-
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -6,8 +5,8 @@ metadata:
 spec:
   tls:
   - hosts:
-    - cafe.example.com
-    secretName: cafe-secret
+      - cafe.example.com
+    secretName: testsecret-tls
   rules:
   - host: cafe.example.com
     http:
